--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+/*.sublime-workspace
+/node_modules
+/dist
+/.tmp
+/.sass-cache
+/bower_components
